# neut

./: .gitignore  README.md
src/: Makefile.am  Makefile.in  README_hayato  README_panos  build.common  configure  configure.ac  ltmain.sh  release_notes_5.3.2.2.txt
src/crsdat/: 98mod_p.dat.pre_511  98mod_pn.dat.pre_511  HT2p2h  qelSfData
src/escat/: Makefile.am  Makefile.in  neutescat.cc
src/gcalor/: gcalor.car  gcalor.contents  gcalor_unix.F  gcalor_vax.for  readme.text  recoil.guhadr
src/ht2p2h/: Makefile  Makefile.am  Makefile.in
src/kamflux/: Imakefile  LEE.DATA  flux.F  gaiflx.F  honflx.F  kfile_flux.csh  last.kumac  last.kumacold  leeflx.F  nauflx.F  rdhond.F  rdhonh.F  rflux.F  test.f
src/mec/: Makefile.am  Makefile.in  fnmec_nieves.F  fnmec_select.F  meccrs.h  nemechad.F  nemeclpv.F  nemecvcp.F  neranbll2.F
src/n1p1h/: Makefile  Makefile.am  Makefile.in
src/neutclass/: CommonBlockIFace.cc  CommonBlockIFace.h  HepMCReader.cc  HepMCReader.h  HepMCWriter.cc  Makefile  Makefile.am  Makefile.in  Makefile.old  NeutRootHandlers.cc  NeutRootHandlers.h  chkfillneutvect.cc  chkfillneutvtx.cc  chkfort.F  chkreadneutvect.cc  chkreadneutvtx.cc  gen_root_so.sh  neutclassLinkDef.h  neutctrl.cc  neutctrl.h  neutfill.cc  neutfsipart.cc  neutfsipart.h  neutfsivert.cc  neutfsivert.h  neutnucfsistep.cc  neutnucfsistep.h  neutnucfsivert.cc  neutnucfsivert.h  neutpart.cc  neutpart.h  neutrootTreeSingleton.cc  neutrootTreeSingleton.h  neutrootfortwrapper.cc  neutvect.cc  neutvect.h  neutvtx.cc  neutvtx.h  nucleonfsihistC.h  silence.F
src/neutcore/: Imakefile  LH.F  Makefile  Makefile.am  Makefile.in  NEUTCOREVER.inc  NReWeightNuXSecRES.cc  bbba05.F  bbba07.cc  byabpar.F  bykax.F  bykvec.F  calcLH.F  calcqecrs.F  cardistoml.cc  cardname.h  cohcrsne.F  cohcrsneberger.F  cohcrsnekart.F  cohcrsnerein.F  cohkartlamda.F  cohkartq2min.F  cohkarttmin.F  cohkartwmax.F  cohma.F  dcohmxneberger.F  dcohmxnekart.F  dcohmxnerein.F  dcohneberger.F  dcohnekart.F  dcohnerein.F  ddifcrs.F  ddifmx.F  ddifnerein.c  difcrsne.F  difcrsnerein.F  dndxdy.F  dnela.F  dnels.F  dnelsnl.F  (+241 more)
src/neutgeom/: ExtraLib  GNUmakefile  Makefile.am  Makefile.in  PeriodicTable.h  PeriodicTable_const.h  SystemOfUnits.h  TNDelements.h  TNeutEventGenerator.h  TNeutOutput.cc  TNeutOutput.h  TNeutXsec.h  TNuTrajectory.cc  TNuTrajectory.h  dumptotpau_nd280.cc  event_rate.cc  genev.cc  neut.card  neutev.F  neutxs.F  setup.sh
src/neutsmpl/: Cleanneutsmpl  Cleanneutsmpl.csh  EnvMakeneutsmpl.csh  GNUmakefile.dumptotpau  GNUmakefile.neutroot  Imakefile  Makefile  Makefile.am  Makefile.in  Makeneutsmpl  Makeneutsmpl.csh  README  README.CARD  atoi_.c  basic_histos.cc  cc1pi.eps  ccqe_mec.eps  chkreadneutroot.cc  chkreadneutroot_mec.cc  config_g77.gmk  config_gfortran.gmk  config_gfortran_nopie.gmk  cross_section_histos.cc  dumpcohcrs.F  dumpcrs  dumpcrs.F  dumpcrs.tbl  dumpcrs_5142.tbl  dumpelspau.F  dumptotpau.F  dumptotpauC.cc  flx_intrfc.cc  fnrawcrs.F  gperfstart.cc  grndmq.F  last.kumac  last.kumacold  minerva_flux.cc  neut.F  neut.card  (+17 more)
src/neututils/: Makefile.am  Makefile.in
src/nuccorspl/: Imakefile  Makefile  Makefile.am  Makefile.in  NUCCORVER.inc  fsinucleonreweight.h  nr2iso.F  nrazio.F  nrcard.F  nrcard.h  nrcard_toml.cc  nrcfd.F  nrcms.h  nrcone.F  nrcst.F  nrctpnh.F  nrctpnl.F  nrctpp.F  nrdis.h  nrfermi.F  nrhad.h  nrhadr.h  nrhis.F  nrinit.F  nrint.h  nrintr.F  nrkin.F  nrlibver.F  nrllor.F  nrloren.F  nrnewprd.h  nrnuc.F  nrnuclparam.h  nrprat.h  nrprbin.F  nrprd.F  nrprton.F  nrranve.F  nrrodis.F  nrroxy.F  (+7 more)
src/nuceff/: Imakefile  Makefile  Makefile.am  Makefile.in  NUCEFFVER.inc  absboost.F  absdelta.F  absflpsor.F  absfourbody.F  absgen_four.F  absgen_three.F  absgen_two.F  absgeninout.h  absnegenbod.F  absneject.F  absneject.h  absnepdk.F  abspi.F  abspidpp.F  abspidpp.h  absprob.F  absrotres2.F  absthreebody.F  abstwobody.F  ainvms.F  dcy2bd.F  dcy3bd.F  density.F  efabpath.F  efabpathtun.F  efabrho.F  efabsrat.F  efcalamp.F  efclfsi.F  efcohsct.F  efconv2roxy.F  efcoulforce.F  efcoulforce.h  efd13.F  efd15.F  (+85 more)
src/nuclsmpl/: Makefile  Makefile.am  Makefile.in  neut.C.card  neut.card  nuclscat.F  nuclscatana.cc  nuclscatana.h  nucltransana.cc  nucltransana.h  pars_nuclscat.h  pars_nucltrans.h  run_nuclscat.sh  run_nuclscat_Ar.sh  run_nuclscat_C.sh  run_nuclscatana.cc  run_nucltransana.cc
src/nuclsmplC/: NEUTCIncludes.hxx  checknscat.C  makefile  nuclscat.cxx  nuclscat_anal.cxx  nuclscat_output_blocks.hxx  tauvect.F
src/partnuck/: Imakefile  Makefile  Makefile.am  Makefile.in  PARTNUCKVER.inc  cfd.F  cone.F  hadron.h  lloren.F  loren.F  masses.h  nucnewprd.h  partnuc.F  partnucint.h  prbin.F  ran_ranlux.h  ranf.F  ranve.F
src/pionsmpl/: GNUmakefile  Makefile  Makefile.am  Makefile.in  README  gampi.F  pars_piscat.h  piscat.F  piscatana.cc  piscatana.h  run_piscat.sh  run_piscatana.cc  run_piscatplot.cc  tauvect.F
src/radcorr/: GNUmakefile  Makefile  Makefile.am  Makefile.in  ProbDist.root  RADCORRVER.inc  RadCorrection.c  RadnueCCQE.root  RadnumuCCQE.root  convertinputs.C  input0.txt  input1.txt  input2.txt  mpsample0.txt  mpsample1.txt  mpsample2.txt  radcorr.cc  radcorr_inputs.root  spline_definitions.h
src/reweight/: CascadeNucleon.cc  CascadeNucleon.h  CascadePion.cc  CascadePion.h  CommonBlockIFace.cc  CommonBlockIFace.h  Controls.h  EventSummaryHelper.h  GNUmakefile  LinkDef.h  Makefile.am  Makefile.in  NFortFns.cc  NFortFns.h  NModeDefn.cc  NModeDefn.h  NReWeight.cc  NReWeight.h  NReWeightBindingEnergy.cc  NReWeightBindingEnergy.h  NReWeightCasc.cc  NReWeightCasc.h  NReWeightCascNucleon.cc  NReWeightCascNucleon.h  NReWeightEngineI.h  NReWeightFactory.cc  NReWeightFactory.h  NReWeightI.h  NReWeightINuke.cc  NReWeightINuke.h  NReWeightNuXSecCCQE.cc  NReWeightNuXSecCCQE.h  NReWeightNuXSecCCRES.cc  NReWeightNuXSecCCRES.h  NReWeightNuXSecCOH.cc  NReWeightNuXSecCOH.h  NReWeightNuXSecDIS.cc  NReWeightNuXSecDIS.h  NReWeightNuXSecNC.cc  NReWeightNuXSecNC.h  (+30 more)
src/skmcsvc/: Imakefile  Makefile  Makefile.am  Makefile.in  SKMCSVCVER.inc  ccopen.c  ccopnf.F  charterm.c  excard.F  getuni.F  getvar.F  (+26 more)
(+1270 files in other folders)
