include $(top_srcdir)/build.common

AM_CXXFLAGS = -DNEUTESCAT_VERSION=@NEUT_VERSION_NUM@ $(DEFAULT_CXXFLAGS) -I$(top_srcdir)/neutclass

bin_PROGRAMS = neutescat

NEUTSMPL_PROGLDADD = $(NEUT_LIBS) $(CERN_LIBS) $(ROOT_LIBS) $(EXE_RTLIBS)
NEUTSMPL_PROGLDFLAGS = $(EXE_LINKFLAGS) $(CERN_LINKFLAGS) $(ROOT_LINKFLAGS)

neutescat_SOURCES = neutescat.cc
neutescat_LDADD = $(NEUTSMPL_PROGLDADD)
neutescat_LDFLAGS = $(NEUTSMPL_PROGLDFLAGS)
